--- a/index.html
+++ b/index.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD230</title>
+    <meta name="description" content="Assignment portal for Miguel I. Prot Garcia in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+    <title>WDD230 - Miguel Prot Project</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <p>My First File By Github</p>
+    <header class="myInfo">
+        <img src="./images/profile.jpg" alt="profile image" />
+        <h1>Miguel I. Prot Garcia</h1>
+    </header>
+
+    <main class="list">
+        <h2>WDD230: Assignment Portal</h2>
+        <hr>
+        <ul>
+            <li>Lesson 02: <a href="#">Title</a></li>
+            <li>Lesson 03: <a href="#">Title</a></li>
+            <li>Lesson 04: <a href="#">Title</a></li>
+            <li>Lesson 05: <a href="#">Title</a></li>
+            <li>Lesson 06: <a href="#">Title</a></li>
+            <li>Lesson 07: <a href="#">Title</a></li>
+            <li>Lesson 08: <a href="#">Title</a></li>
+            <li>Lesson 09: <a href="#">Title</a></li>
+            <li>Lesson 10: <a href="#">Title</a></li>
+            <li>Lesson 11: <a href="#">Title</a></li>
+        </ul>
+        <p class="message">Some lessons may need more than one activity/assignment link.</p>
+    </main>
+    <footer class="footer">
+        <p class="copy">&copy; <span id="year"></span> .:|:. Miguel I. Prot Garcia .:|:. Cancun Q. Roo, Mx. <br> <small>Last Updated: <span id="fullDate"></span></small></p>
+    </footer>
+    <script src="./js/scripts.js"></script>
 </body>
 </html>
