uploading lesson3 folder

--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Plan</title>
-    <meta name="description" content="Lesson 3 - Site Plan">
+    <title>Site Plan | Color Scheme</title>
+    <meta name="description" content="Lesson 3 - Color Scheme">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,600&family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
@@ -29,15 +29,23 @@
     </nav>
 
     <main>
-        <h2>Site Porpuse</h2>
-        <p>To help people in Cancun to build and improve their business, entrepreneurship and dreams to build a better future. Also, to centralize all the important information that the people wants to reach to get.</p>
-        
-        <h2>Domain</h2>
-        <p>www.cancunschamber.com</p>
-        
-        <h2>Logo</h2>
-        <img src="./images/logo.png" alt="logo" class="logo">
-
+        <section>
+            <h2>Color Palette</h2>
+            <table class="colors">
+                <tr>
+                    <th>Primary</th>
+                    <th>Secondary</th>
+                    <th>Accent 1</th>
+                    <th>Accent 2</th>
+                </tr>
+                <tr>
+                    <td class="primary">[#0075b1]</td>
+                    <td class="secondary">[#ffe230]</td>
+                    <td class="accent1">[#ee4237]</td>
+                    <td class="accent2">[#000000]</td>
+                </tr>
+            </table>
+        </section>
     </main>
     <footer class="footer">
         <p class="copy">&copy; <span id="year"></span> .:|:. Miguel I. Prot Garcia .:|:. Cancun Q. Roo, Mx. <br> <small>Last Updated: <span id="fullDate"></span></small></p>
