--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Plan</title>
-    <meta name="description" content="Lesson 3 - Site Plan">
+    <title>Site Plan | Typography</title>
+    <meta name="description" content="Lesson 3 - Typography information">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,600&family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
@@ -29,15 +29,15 @@
     </nav>
 
     <main>
-        <h2>Site Porpuse</h2>
-        <p>To help people in Cancun to build and improve their business, entrepreneurship and dreams to build a better future. Also, to centralize all the important information that the people wants to reach to get.</p>
-        
-        <h2>Domain</h2>
-        <p>www.cancunschamber.com</p>
-        
-        <h2>Logo</h2>
-        <img src="./images/logo.png" alt="logo" class="logo">
-
+        <section>
+            <h2>Typography</h2>
+            <h3>Heading Font:</h3>
+            <p>Anton</p>
+            <h3>Paragraphy Font: </h3>
+            <p>Roboto / Poppins</p>
+            <h3>Normailized Font: </h3>
+            <p>Open Sans</p>
+        </section>
     </main>
     <footer class="footer">
         <p class="copy">&copy; <span id="year"></span> .:|:. Miguel I. Prot Garcia .:|:. Cancun Q. Roo, Mx. <br> <small>Last Updated: <span id="fullDate"></span></small></p>
