updating css for responsive and improving the l&f

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -13,41 +13,43 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header class="myInfo">
-        <h1>Design Principles Document</h1>
-        <h2>Miguel I. Prot Garcia</h2>
-        <a href="../">Back to Home</a>
-    </header>
-
-    <main class="principles">
-        <div class="single-principle">
-            <h3 class="principle-title">Proximity</h3>
-            <p class="company">Ixtul QH</p>
-            <a target="_blank" href="https://ixtulqh.com/blogs">https://ixtulqh.com/blogs</a>
-            <hr>
-            <img src="images/ixtul.jpg" alt="Ixtul web capture">
-            <p class="desc">I think that this is an example of proximity, because the site, especifically in the blogs section, is grouping each blog with proximity rules, keeping the information of each post close. You can see that the title, date, link and the image are part of the same post. Also, there is a space between the posts to separate them.</p>
-        </div>
-        <div class="single-principle">
-            <h3 class="principle-title">Visual Hierarchy</h3>
-            <p class="company">Apple</p>
-            <a target="_blank" href="https://www.apple.com/mx/ipad/">apple.com</a>
-            <hr>
-            <img src="images/apple.jpg" alt="Apple web capture">
-            <p class="desc">In this site, we can see an specific example of visual hierarchy. Whe we visit this site, the first think that we see is the iPad, then we can see the model and a brief description, to finally see the price and the option to access to more details. This is not lucky, is good design using this important principle.</p>
-        </div>
-        <div class="single-principle">
-            <h3 class="principle-title">White Space and Clean Design</h3>
-            <p class="company">BYU Pathway Worldwide</p>
-            <a target="_blank" href="https://www.byupathway.org">byupathway.org/</a>
-            <hr>
-            <img src="images/pathway.jpg" alt="BYU Pathway Worldwide web capture">
-            <p class="desc">BYU Pathway Worldwide makes an incredible use of the White space and clean design principle. Across all the site we can see the use of this important spaces to make the information clearest to show important information in short parts of the web. We can feel a sensation fo cleanest.</p>
-        </div>
-    </main>
-    <footer class="footer">
-        <p class="copy">&copy; <span id="year"></span> .:|:. Miguel I. Prot Garcia .:|:. Cancun Q. Roo, Mx. <br> <small>Last Updated: <span id="fullDate"></span></small></p>
-    </footer>
+    <div class="container">
+        <header class="myInfo">
+            <h1>Design Principles Document</h1>
+            <h2>Miguel I. Prot Garcia</h2>
+            <a href="../">Back to Home</a>
+        </header>
+    
+        <main class="principles">
+            <div class="single-principle">
+                <h3 class="principle-title">Proximity</h3>
+                <p class="company">Ixtul QH</p>
+                <a target="_blank" href="https://ixtulqh.com/blogs">https://ixtulqh.com/blogs</a>
+                <hr>
+                <img src="images/ixtul.jpg" alt="Ixtul web capture">
+                <p class="desc">I think that this is an example of proximity, because the site, especifically in the blogs section, is grouping each blog with proximity rules, keeping the information of each post close. You can see that the title, date, link and the image are part of the same post. Also, there is a space between the posts to separate them.</p>
+            </div>
+            <div class="single-principle">
+                <h3 class="principle-title">Visual Hierarchy</h3>
+                <p class="company">Apple</p>
+                <a target="_blank" href="https://www.apple.com/mx/ipad/">apple.com</a>
+                <hr>
+                <img src="images/apple.jpg" alt="Apple web capture">
+                <p class="desc">In this site, we can see an specific example of visual hierarchy. Whe we visit this site, the first think that we see is the iPad, then we can see the model and a brief description, to finally see the price and the option to access to more details. This is not lucky, is good design using this important principle.</p>
+            </div>
+            <div class="single-principle">
+                <h3 class="principle-title">White Space and Clean Design</h3>
+                <p class="company">BYU Pathway Worldwide</p>
+                <a target="_blank" href="https://www.byupathway.org">byupathway.org/</a>
+                <hr>
+                <img src="images/pathway.jpg" alt="BYU Pathway Worldwide web capture">
+                <p class="desc">BYU Pathway Worldwide makes an incredible use of the White space and clean design principle. Across all the site we can see the use of this important spaces to make the information clearest to show important information in short parts of the web. We can feel a sensation fo cleanest.</p>
+            </div>
+        </main>
+        <footer class="footer">
+            <p class="copy">&copy; <span id="year"></span> .:|:. Miguel I. Prot Garcia .:|:. Cancun Q. Roo, Mx. <br> <small>Last Updated: <span id="fullDate"></span></small></p>
+        </footer>
+    </div>
     <script src="./js/scripts.js"></script>
 </body>
 </html>
