--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -13,43 +13,47 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header class="myInfo">
-        <h1>Cancun's Chamber of Commerce</h1>
-        <p class="text-center txt-white">To help people to improve their opportunities.</p>
-        <a href="../">Back to Home</a>
-    </header>
+    <div class="container">
+        <header class="myInfo">
+            <h1>Cancun's Chamber of Commerce</h1>
+            <p class="text-center txt-white">To help people to improve their opportunities.</p>
+            <a href="../">Back to Home</a>
+        </header>
+    
+        <nav>
+            <span class="mobile-menu">Show Menu</span>
+            <ul id="sub-nav">
+                <li><a href="./">Home</a></li>
+                <li><a href="target-audience.html">Target Audience</a></li>
+                <li><a href="color-scheme.html">Color Scheme</a></li>
+                <li><a href="typography.html">Typography</a></li>
+            </ul>
+        </nav>
+    
+        <main>
+            <section>
+                <h2>Color Palette</h2>
+                <table class="colors">
+                    <tr>
+                        <th>Primary</th>
+                        <th>Secondary</th>
+                        <th>Accent 1</th>
+                        <th>Accent 2</th>
+                    </tr>
+                    <tr>
+                        <td class="primary">[#0075b1]</td>
+                        <td class="secondary">[#ffe230]</td>
+                        <td class="accent1">[#ee4237]</td>
+                        <td class="accent2">[#000000]</td>
+                    </tr>
+                </table>
+            </section>
+        </main>
+        <footer class="footer">
+            <p class="copy">&copy; <span id="year"></span> .:|:. Miguel I. Prot Garcia .:|:. Cancun Q. Roo, Mx. <br> <small>Last Updated: <span id="fullDate"></span></small></p>
+        </footer>
+    </div>
 
-    <nav>
-        <ul>
-            <li><a href="./">Home</a></li>
-            <li><a href="target-audience.html">Target Audience</a></li>
-            <li><a href="color-scheme.html">Color Scheme</a></li>
-            <li><a href="typography.html">Typography</a></li>
-        </ul>
-    </nav>
-
-    <main>
-        <section>
-            <h2>Color Palette</h2>
-            <table class="colors">
-                <tr>
-                    <th>Primary</th>
-                    <th>Secondary</th>
-                    <th>Accent 1</th>
-                    <th>Accent 2</th>
-                </tr>
-                <tr>
-                    <td class="primary">[#0075b1]</td>
-                    <td class="secondary">[#ffe230]</td>
-                    <td class="accent1">[#ee4237]</td>
-                    <td class="accent2">[#000000]</td>
-                </tr>
-            </table>
-        </section>
-    </main>
-    <footer class="footer">
-        <p class="copy">&copy; <span id="year"></span> .:|:. Miguel I. Prot Garcia .:|:. Cancun Q. Roo, Mx. <br> <small>Last Updated: <span id="fullDate"></span></small></p>
-    </footer>
     <script src="./js/scripts.js"></script>
 </body>
 </html>
