--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -21,7 +21,7 @@
         </header>
     
         <nav>
-            <span class="mobile-menu">Show Menu</span>
+            <span class="mobile-menu">Menu &#9776;</span>
             <ul id="sub-nav">
                 <li><a href="./">Home</a></li>
                 <li><a href="target-audience.html">Target Audience</a></li>
