updating home chamber

--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -44,7 +44,7 @@
                         <td class="primary">[#0075b1]</td>
                         <td class="secondary">[#ffe230]</td>
                         <td class="accent1">[#ee4237]</td>
-                        <td class="accent2">[#000000]</td>
+                        <td class="accent2">[#3e3e3e]</td>
                     </tr>
                 </table>
             </section>
