--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul class="list-lessons">
                 <li>Lesson 02: <a href="./lesson2/design-principles.html">Design Principles Document</a></li>
                 <li>Lesson 03: <a href="./lesson3/">Site Plan</a></li>
-                <li>Lesson 04: <a href="#">Title</a></li>
+                <li>Lesson 04: <a href="./chamber/">Cancun's Chamber of Commerce</a></li>
                 <li>Lesson 05: <a href="#">Title</a></li>
                 <li>Lesson 06: <a href="#">Title</a></li>
                 <li>Lesson 07: <a href="#">Title</a></li>
