--- a/chamber/index.html
+++ b/chamber/index.html
@@ -32,11 +32,15 @@
                     <li><a href="#">Join</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
-                <!-- <div class="social-media">
-                    <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
-                </div> -->
             </nav>
+            <div class="social-media">
+                <a class="fb" href="#" target="_blank">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a class="yt" href="#" target="_blank">
+                    <i class="fab fa-youtube"></i>
+                </a>
+            </div>
         </header>
                
         <main>
