--- a/chamber/index.html
+++ b/chamber/index.html
@@ -42,9 +42,7 @@
                     <i class="fab fa-youtube"></i>
                 </a>
             </div>
-            <div class="date">
-                Lorem ipsum dolor sit amet.
-            </div>
+            <div class="date"></div>
         </header>
                
         <main>
