--- a/chamber/index.html
+++ b/chamber/index.html
@@ -74,6 +74,9 @@
                     <p>Discover how to join the chamber of commerce and how it will benefit your organization!</p>
                 </div>
                 <div class="call-to-action">
+                    <div id="top-banner" style="display: none;">
+                        <h2>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</h2>
+                    </div>
                     <picture>
                         <source srcset="./images/hero-medium.webp" media="(min-width: 500px) and (max-width: 799px)">
                             <source srcset="./images/hero-large.webp" media="(min-width: 800px)">
