--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li>Lesson 04: <a href="./chamber/">Cancun's Chamber of Commerce</a></li>
                 <li>Lesson 05: <a href="./chamber/">Cancun's Chamber of Commerce</a></li>
                 <li>Lesson 06: <a href="./chamber/">Cancun's Chamber of Commerce</a></li>
-                <li>Lesson 07: <a href="#">Title</a></li>
+                <li>Lesson 07: <a href="./lesson7/lazyload.html">Progressive Loading</a></li>
                 <li>Lesson 08: <a href="#">Title</a></li>
                 <li>Lesson 09: <a href="#">Title</a></li>
                 <li>Lesson 10: <a href="#">Title</a></li>
