--- a/chamber/index.html
+++ b/chamber/index.html
@@ -27,11 +27,21 @@
             <nav class="menu">
                 <span class="mobile-menu">Menu &#9776;</span>
                 <ul class="menu-items">
-                    <li class="selected"><a href="#">Home</a></li>
-                    <li><a href="#">Discover</a></li>
-                    <li><a href="#">Directory</a></li>
-                    <li><a href="#">Join</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li class="selected">
+                        <a href="./">Home</a>
+                    </li>
+                    <li>
+                        <a href="./discover.html">Discover</a>
+                    </li>
+                    <li>
+                        <a href="#">Directory</a>
+                    </li>
+                    <li>
+                        <a href="#">Join</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
                 </ul>
             </nav>
             <div class="social-media">
