--- a/index.html
+++ b/index.html
@@ -27,9 +27,23 @@
                 <li>Lesson 02: <a href="./lesson2/design-principles.html">Design Principles Document</a></li>
                 <li>Lesson 03: <a href="./lesson3/">Site Plan</a></li>
                 <li>Lesson 04: <a href="./chamber/">Cancun's Chamber of Commerce</a></li>
-                <li>Lesson 05: <a href="./chamber/">Cancun's Chamber of Commerce</a></li>
-                <li>Lesson 06: <a href="./chamber/">Cancun's Chamber of Commerce</a></li>
-                <li>Lesson 07: <a href="./lesson7/lazyload.html">Progressive Loading</a></li>
+                <li class="sublist-elements">
+                    Lesson 05: 
+                    <div>
+                        <a href="./chamber/">Cancun's Chamber of Commerce</a>
+                        <a href="./bom/">Book of Mormon</a>
+                    </div>
+                </li>
+                <li>
+                    Lesson 06: <a href="./chamber/">Responsive Design</a> <br>
+                </li>
+                <li class="sublist-elements">
+                    Lesson 07: 
+                    <div>
+                        <a href="./lesson7/lazyload.html">Progressive Loading</a>
+                        <a href="./chamber/discover.html">Discover Page</a>
+                    </div>
+                </li>
                 <li>Lesson 08: <a href="#">Title</a></li>
                 <li>Lesson 09: <a href="#">Title</a></li>
                 <li>Lesson 10: <a href="#">Title</a></li>
