--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -27,10 +27,10 @@
             <nav class="menu">
                 <span class="mobile-menu">Menu &#9776;</span>
                 <ul class="menu-items">
-                    <li class="selected">
+                    <li>
                         <a href="./">Home</a>
                     </li>
-                    <li>
+                    <li class="selected">
                         <a href="./discover.html">Discover</a>
                     </li>
                     <li>
@@ -52,27 +52,66 @@
                     <i class="fab fa-youtube"></i>
                 </a>
             </div>
-            <div class="date"></div>
+            <div class="yellow">
+                <div class="visits"></div>
+                <div class="date"></div>
+            </div>
         </header>
                
         <main>
-            <div class="disc-grid">
-                <picture class="pic-1">
-                    <img data-src="./images/disc_1.webp" src="./images/placeholder.png" alt="Cancun">
+            <div class="gallery">
+                <picture>
+                    <img data-src="./images/disc_1.webp" src="./images/placeholder.webp" alt="Cancun">
                 </picture>
-                <p class="text-1">
+                <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde soluta quaerat iure asperiores sit laudantium nulla, saepe provident vel officia.
                 </p>
-                <p class="text-2">
+                <picture>
+                    <img data-src="./images/disc_2.webp" src="./images/placeholder.webp" alt="Cancun">
+                </picture>
+                <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde soluta quaerat iure asperiores sit laudantium nulla, saepe provident vel officia.
                 </p>
-                <picture class="pic-2">
-                    <img data-src="./images/disc_1.webp" src="./images/placeholder.png" alt="Cancun">
+                <picture>
+                    <img data-src="./images/disc_3.webp" src="./images/placeholder.webp" alt="Cancun">
                 </picture>
-                <picture class="pic-3">
-                    <img data-src="./images/disc_1.webp" src="./images/placeholder.png" alt="Cancun">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde soluta quaerat iure asperiores sit laudantium nulla, saepe provident vel officia.
+                </p>
+                <picture>
+                    <img data-src="./images/disc_4.webp" src="./images/placeholder.webp" alt="Cancun">
                 </picture>
-                <p class="text-3">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde soluta quaerat iure asperiores sit laudantium nulla, saepe provident vel officia.
+                </p>
+                <picture>
+                    <img data-src="./images/disc_5.webp" src="./images/placeholder.webp" alt="Cancun">
+                </picture>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde soluta quaerat iure asperiores sit laudantium nulla, saepe provident vel officia.
+                </p>
+                <picture>
+                    <img data-src="./images/disc_6.webp" src="./images/placeholder.webp" alt="Cancun">
+                </picture>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde soluta quaerat iure asperiores sit laudantium nulla, saepe provident vel officia.
+                </p>
+                <picture>
+                    <img data-src="./images/disc_7.webp" src="./images/placeholder.webp" alt="Cancun">
+                </picture>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde soluta quaerat iure asperiores sit laudantium nulla, saepe provident vel officia.
+                </p>
+                <picture>
+                    <img data-src="./images/disc_8.webp" src="./images/placeholder.webp" alt="Cancun">
+                </picture>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde soluta quaerat iure asperiores sit laudantium nulla, saepe provident vel officia.
+                </p>
+                <picture>
+                    <img data-src="./images/disc_9.webp" src="./images/placeholder.webp" alt="Cancun">
+                </picture>
+                <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde soluta quaerat iure asperiores sit laudantium nulla, saepe provident vel officia.
                 </p>
             </div>
@@ -99,5 +138,7 @@
     </div>
 
     <script src="./js/scripts.js"></script>
+    <script src="./js/lazyload.js"></script>
+    <script src="./js/localStorage.js"></script>
 </body>
 </html>
