--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -64,55 +64,55 @@
                     <img data-src="./images/disc_1.webp" src="./images/placeholder.webp" alt="Cancun">
                 </picture>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde soluta quaerat iure asperiores sit laudantium nulla, saepe provident vel officia.
+                    Here, you can find many options to entrepreneur a business, but the most important is the hotel sector.
                 </p>
                 <picture>
                     <img data-src="./images/disc_2.webp" src="./images/placeholder.webp" alt="Cancun">
                 </picture>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde soluta quaerat iure asperiores sit laudantium nulla, saepe provident vel officia.
+                    Also, you can innovate with your ideas, doing something great like "La Gran Rueda".
                 </p>
                 <picture>
                     <img data-src="./images/disc_3.webp" src="./images/placeholder.webp" alt="Cancun">
                 </picture>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde soluta quaerat iure asperiores sit laudantium nulla, saepe provident vel officia.
+                    One of the attractives of Cancun, are the water parks.
                 </p>
                 <picture>
                     <img data-src="./images/disc_4.webp" src="./images/placeholder.webp" alt="Cancun">
                 </picture>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde soluta quaerat iure asperiores sit laudantium nulla, saepe provident vel officia.
+                    About the goberment, the city hall is always a good place to visit.
                 </p>
                 <picture>
                     <img data-src="./images/disc_5.webp" src="./images/placeholder.webp" alt="Cancun">
                 </picture>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde soluta quaerat iure asperiores sit laudantium nulla, saepe provident vel officia.
+                    The beaches are the most important attractive to Cancun and base for our economy.
                 </p>
                 <picture>
                     <img data-src="./images/disc_6.webp" src="./images/placeholder.webp" alt="Cancun">
                 </picture>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde soluta quaerat iure asperiores sit laudantium nulla, saepe provident vel officia.
+                    We have many malls full of business to visit.
                 </p>
                 <picture>
                     <img data-src="./images/disc_7.webp" src="./images/placeholder.webp" alt="Cancun">
                 </picture>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde soluta quaerat iure asperiores sit laudantium nulla, saepe provident vel officia.
+                    The last one, is the "Puerto Cancún" mall.
                 </p>
                 <picture>
                     <img data-src="./images/disc_8.webp" src="./images/placeholder.webp" alt="Cancun">
                 </picture>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde soluta quaerat iure asperiores sit laudantium nulla, saepe provident vel officia.
+                    If you love spent time in golf, we also have it.
                 </p>
                 <picture>
                     <img data-src="./images/disc_9.webp" src="./images/placeholder.webp" alt="Cancun">
                 </picture>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde soluta quaerat iure asperiores sit laudantium nulla, saepe provident vel officia.
+                    Of course, we have many activities like the museum under the water.
                 </p>
             </div>
         </main>
