--- a/index.html
+++ b/index.html
@@ -44,7 +44,12 @@
                         <a href="./chamber/discover.html">Discover Page</a>
                     </div>
                 </li>
-                <li>Lesson 08: <a href="#">Title</a></li>
+                <li>
+                    Lesson 08: 
+                    <div>
+                        <a href="./lesson8/tablebuild.html">Tables</a>
+                    </div>
+                </li>
                 <li>Lesson 09: <a href="#">Title</a></li>
                 <li>Lesson 10: <a href="#">Title</a></li>
                 <li>Lesson 11: <a href="#">Title</a></li>
