--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <a href="./chamber/discover.html">Discover Page</a>
                     </div>
                 </li>
-                <li>
+                <li class="sublist-elements">
                     Lesson 08: 
                     <div>
                         <a href="./lesson8/tablebuild.html">Tables</a>
