--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -59,52 +59,7 @@
         </header>
                
         <main class="form">
-            <form action="./thankyou.html" method="get">
-                <fieldset>
-                    <legend>Main Information</legend>
-                    <label for="first_name">First Name*: 
-                        <input type="text" placeholder="Jhon" name="first_name" id="first_name" required>
-                    </label>
-
-                    <label for="last_name">Last Name*: 
-                        <input type="text" placeholder="Doe" name="last_name" id="last_name" required>
-                    </label>
-
-                    <label for="title">Business Position: 
-                        <input type="text" name="title" id="title" pattern="[A-Z]\s{7}" title="Business position">
-                    </label>
-
-                    <label for="email">Email*: 
-                        <input type="email" placeholder="jhonDoe@mail.com" name="email" id="email" required>
-                    </label>
-
-                    <label for="celphone">Cellphone*: 
-                        <input type="tel" placeholder="9981210000" name="celphone" id="celphone" required>
-                    </label>
-                </fieldset>
-                <br>
-                <fieldset>
-                    <legend>Business</legend>
-                    <label for="business_name">Business Name*: 
-                        <input type="text" name="business_name" id="business_name" required>
-                    </label>
-
-                    <label for="membership">Membership: 
-                        <select name="membership" id="membership">
-                            <option value="">Select your memebership</option>
-                            <option value="0">NP Membership is for non profit organizations and there is no fee.</option>
-                            <option value="1">Bronze Membership.</option>
-                            <option value="2">Silver Membership</option>
-                            <option value="3">Gold Membership</option>
-                        </select>
-                    </label>
-                    <label for="business_desc">Description: 
-                        <textarea name="business_desc" id="business_desc" cols="30" rows="4" placeholder="Describe your business"></textarea>
-                    </label>
-                    <input type="hidden" name="date">
-                </fieldset>
-                <input type="submit" value="Send">
-            </form>
+            <h1>Thanks for your message!</h1>
         </main>
         
         <footer class="footer">
