--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     Lesson 08: 
                     <div>
                         <a href="./lesson8/tablebuild.html">Tables</a>
+                        <a href="./lesson8/join.html">Join Page</a>
                     </div>
                 </li>
                 <li>Lesson 09: <a href="#">Title</a></li>
