--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -22,7 +22,9 @@
     <div class="container">
         <header>
             <div class="brand">
-                <img src="./images/full_logo.webp" alt="Cancun's Chamber of Commerce">
+                <a href="./index.html">
+                    <img src="./images/full_logo.webp" alt="Cancun's Chamber of Commerce">
+                </a>
             </div>
             <nav class="menu">
                 <span class="mobile-menu">Menu &#9776;</span>
@@ -37,7 +39,7 @@
                         <a href="#">Directory</a>
                     </li>
                     <li>
-                        <a href="#">Join</a>
+                        <a href="./join.html">Join</a>
                     </li>
                     <li>
                         <a href="#">Contact</a>
