--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,7 +22,9 @@
     <div class="container">
         <header>
             <div class="brand">
-                <img src="./images/full_logo.webp" alt="Cancun's Chamber of Commerce">
+                <a href="./index.html">
+                    <img src="./images/full_logo.webp" alt="Cancun's Chamber of Commerce">
+                </a>
             </div>
             <nav class="menu">
                 <span class="mobile-menu">Menu &#9776;</span>
@@ -37,7 +39,7 @@
                         <a href="#">Directory</a>
                     </li>
                     <li>
-                        <a href="#">Join</a>
+                        <a href="./join.html">Join</a>
                     </li>
                     <li>
                         <a href="#">Contact</a>
@@ -52,7 +54,10 @@
                     <i class="fab fa-youtube"></i>
                 </a>
             </div>
-            <div class="date"></div>
+            <div class="yellow">
+                <div class="visits"></div>
+                <div class="date"></div>
+            </div>
         </header>
                
         <main>
@@ -174,5 +179,6 @@
 
     <script src="./js/scripts.js"></script>
     <script src="./js/windchill.js"></script>
+    <script src="./js/localStorage.js"></script>
 </body>
 </html>
