--- a/chamber/join.html
+++ b/chamber/join.html
@@ -22,7 +22,9 @@
     <div class="container">
         <header>
             <div class="brand">
-                <img src="./images/full_logo.webp" alt="Cancun's Chamber of Commerce">
+                <a href="./index.html">
+                    <img src="./images/full_logo.webp" alt="Cancun's Chamber of Commerce">
+                </a>
             </div>
             <nav class="menu">
                 <span class="mobile-menu">Menu &#9776;</span>
@@ -37,7 +39,7 @@
                         <a href="#">Directory</a>
                     </li>
                     <li class="selected">
-                        <a href="#">Join</a>
+                        <a href="./join.html">Join</a>
                     </li>
                     <li>
                         <a href="#">Contact</a>
@@ -71,7 +73,7 @@
                     </label>
 
                     <label for="title">Business Position: 
-                        <input type="text" name="title" id="title" pattern="[A-Z]\s{7}" title="Business position">
+                        <input type="text" name="title" id="title" pattern="[a-zA-Z-_\s]{7,}" title="This field accepts alpha characters, hyphens, and spaces with a minimum of seven characters">
                     </label>
 
                     <label for="email">Email*: 
@@ -103,7 +105,9 @@
                     </label>
                     <input type="hidden" name="date">
                 </fieldset>
-                <input type="submit" value="Send">
+                <p class="text-center">
+                    <input class="btn" type="submit" value="Send">
+                </p>
             </form>
         </main>
         
