--- a/index.html
+++ b/index.html
@@ -51,7 +51,13 @@
                         <a href="./chamber/join.html">Join Page</a>
                     </div>
                 </li>
-                <li>Lesson 09: <a href="#">Title</a></li>
+                <li class="sublist-elements">
+                    Lesson 09: 
+                    <div>
+                        <a href="./lesson9/prophets.html">Prophets (Working with JSON)</a>
+                        <!-- <a href="./chamber/join.html">Join Page</a> -->
+                    </div>
+                </li>
                 <li>Lesson 10: <a href="#">Title</a></li>
                 <li>Lesson 11: <a href="#">Title</a></li>
             </ul>
