--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -36,7 +36,7 @@
                         <a href="./discover.html">Discover</a>
                     </li>
                     <li>
-                        <a href="#">Directory</a>
+                        <a href="./directory.html">Directory</a>
                     </li>
                     <li class="selected">
                         <a href="./join.html">Join</a>
