--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     Lesson 09: 
                     <div>
                         <a href="./lesson9/prophets.html">Prophets (Working with JSON)</a>
-                        <!-- <a href="./chamber/join.html">Join Page</a> -->
+                        <a href="./chamber/directory.html">Directory Page</a>
                     </div>
                 </li>
                 <li>Lesson 10: <a href="#">Title</a></li>
