--- a/index.html
+++ b/index.html
@@ -58,7 +58,13 @@
                         <a href="./chamber/directory.html">Directory Page</a>
                     </div>
                 </li>
-                <li>Lesson 10: <a href="#">Title</a></li>
+                <li class="sublist-elements">
+                    Lesson 10: 
+                    <div>
+                        <a href="./lesson10/weather-api.html">Wheater API</a>
+                        <!-- <a href="./chamber/directory.html">Directory Page</a> -->
+                    </div>
+                </li>
                 <li>Lesson 11: <a href="#">Title</a></li>
             </ul>
             <p class="message">Some lessons may need more than one activity/assignment link.</p>
