--- a/chamber/index.html
+++ b/chamber/index.html
@@ -74,12 +74,13 @@
                         Wheater
                     </h3>
                     <div class="wheater-image">
-                        <i class="fa-solid fa-cloud-sun"></i>
+                        <!-- <i class="fa-solid fa-cloud-sun"></i> -->
+                        <img src="" alt="">
                         <div class="temp">
-                            <p><span id="temp">33</span> °C</p>
+                            <p><span id="temp">33</span> °F</p>
                         </div>
                     </div>
-                    <h4>Partly Cloudy</h4>
+                    <h4 id="wheater-desc">Partly Cloudy</h4>
                     <hr>
                     <p>Wind Speed: <span id="wind_speed">2.5</span>km/h</p>
                     <p>Wind Chill: <span id="wind_chill"></span></p>
