--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     Lesson 10: 
                     <div>
                         <a href="./lesson10/weather-api.html">Wheater API</a>
-                        <!-- <a href="./chamber/directory.html">Directory Page</a> -->
+                        <a href="./chamber/">Using the Weather API</a>
                     </div>
                 </li>
                 <li>Lesson 11: <a href="#">Title</a></li>
