--- a/chamber/index.html
+++ b/chamber/index.html
@@ -82,7 +82,7 @@
                     </div>
                     <h4 id="wheater-desc">Partly Cloudy</h4>
                     <hr>
-                    <p>Wind Speed: <span id="wind_speed">2.5</span>km/h</p>
+                    <p>Wind Speed: <span id="wind_speed">2.5</span>mph</p>
                     <p>Wind Chill: <span id="wind_chill"></span></p>
                 </div>
                 <div class="join">
