--- a/chamber/index.html
+++ b/chamber/index.html
@@ -42,7 +42,7 @@
                         <a href="./join.html">Join</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="./contact.html">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -100,7 +100,7 @@
                     </picture>
                     <div class="layer-dark">
                         <h3 class="welcome">Welcome to Cancu's chamber of Commerce</h3>
-                        <a href="#" class="btn">Join the Chamber</a>
+                        <a href="./join.html" class="btn">Join the Chamber</a>
                     </div>
                 </div>
                 <div class="news">
