--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -69,7 +69,7 @@
                     loading="lazy"
                     allowfullscreen
                     src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDKiveIfGrVYFch2ZRelvcMCLI2G5drkFI
-                        &q=Space+Needle,Seattle+WA">
+                        &q=cancun">
                 </iframe>
                 <form action="./thankyou.html" method="get">
                     <h1>Contact Form</h1>
