--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -47,10 +47,10 @@
                 </ul>
             </nav>
             <div class="social-media">
-                <a class="fb" href="#" target="_blank">
+                <a class="fb" href="https://facebook.com" target="_blank">
                     <i class="fab fa-facebook-f"></i>
                 </a>
-                <a class="yt" href="#" target="_blank">
+                <a class="yt" href="https://youtube.com" target="_blank">
                     <i class="fab fa-youtube"></i>
                 </a>
             </div>
@@ -110,10 +110,10 @@
                     <a href="tel:+529981210000" target="_blank">+52 998 121 0000</a>
                 </p>
                 <div class="social-media">
-                    <a class="fb" href="#" target="_blank">
+                    <a class="fb" href="https://facebook.com" target="_blank">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a class="yt" href="#" target="_blank">
+                    <a class="yt" href="https://youtube.com" target="_blank">
                         <i class="fab fa-youtube"></i>
                     </a>
                 </div>
