updates until week 9

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -23,7 +23,7 @@
         <header>
             <div class="brand">
                 <a href="./index.html">
-                    <img src="./images/full_logo.webp" alt="Cancun's Chamber of Commerce">
+                    <img src="./images/full_logo.webp" alt="Cancun's Chamber of Commerce" width="100" height="auto">
                 </a>
             </div>
             <nav class="menu">
@@ -122,7 +122,7 @@
         <footer class="footer">
             <div class="columns">
                 <div class="footer-logo">
-                    <img src="./images/full_logo.webp" alt="Cancun's Chamber of Commerce">
+                    <img src="./images/full_logo.webp" alt="Cancun's Chamber of Commerce" width="100" height="auto">
                 </div>
                 <div class="footer-map">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d40313.92854979775!2d-86.85776401124028!3d21.150753474617556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4c2b05aef653db%3A0xce32b73c625fcd8a!2zQ2FuY8O6biwgUS5SLg!5e0!3m2!1ses-419!2smx!4v1643511490022!5m2!1ses-419!2smx" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
