--- a/chamber/join.html
+++ b/chamber/join.html
@@ -23,7 +23,7 @@
         <header>
             <div class="brand">
                 <a href="./index.html">
-                    <img src="./images/full_logo.webp" alt="Cancun's Chamber of Commerce">
+                    <img src="./images/full_logo.webp" alt="Cancun's Chamber of Commerce" width="100" height="auto">
                 </a>
             </div>
             <nav class="menu">
@@ -91,20 +91,49 @@
                         <input type="text" name="title" id="title" pattern="[a-zA-Z-_\s]{7,}" title="This field accepts alpha characters, hyphens, and spaces with a minimum of seven characters">
                     </label>
 
-                    <label for="membership">Membership: 
-                        <select name="membership" id="membership">
-                            <option value="">Select your memebership</option>
-                            <option value="0">NP Membership is for non profit organizations and there is no fee.</option>
-                            <option value="1">Bronze Membership.</option>
-                            <option value="2">Silver Membership</option>
-                            <option value="3">Gold Membership</option>
-                        </select>
-                    </label>
+                    <fieldset>
+                        <legend>Membership types</legend>
+                        <label>
+                            <div class="input-title">
+                                <span class="type">Non Profit  <b class="cost">Free</b></span>
+                            </div>
+                            <p>Be part of our community. Join us now to be updated and meet other businesses.</p>
+                        </label>
+                        <label>
+                            <div class="input-title">
+                                <span class="type">Bronze Membership  <b class="cost">$199</b></span>
+                            </div>
+                            <p>Enjoy </p>
+                        </label>
+                        <label>
+                            <div class="input-title">
+                                <span class="type">Silver Membership  <b class="cost">$299</b></span>
+                            </div>
+                            <p>Be part of our community. Join us now to be updated and meet other businesses like yours!</p>
+                        </label>
+                        <label>
+                            <div class="input-title">
+                                <span class="type">Gold Membership  <b class="cost">$599</b></span>
+                            </div>
+                            <p>Be part of our community. Join us now to be updated and meet other businesses like yours!</p>
+                        </label>
+                        <label for="membership">Membership: 
+                            <select name="membership" id="membership">
+                                <option value="">Select your memebership</option>
+                                <option value="0">Non Profit</option>
+                                <option value="1">Bronze Membership</option>
+                                <option value="2">Silver Membership</option>
+                                <option value="3">Gold Membership</option>
+                            </select>
+                        </label>
+                    </fieldset>
                     <label for="business_desc">Description: 
                         <textarea name="business_desc" id="business_desc" cols="30" rows="4" placeholder="Describe your business"></textarea>
                     </label>
-                    <input type="hidden" name="date">
+                    <input type="text" name="date" class="none">
                 </fieldset>
+                <br>
+                
                 <p class="text-center">
                     <input class="btn" type="submit" value="Join the Chamber">
                 </p>
@@ -114,7 +143,7 @@
         <footer class="footer">
             <div class="columns">
                 <div class="footer-logo">
-                    <img src="./images/full_logo.webp" alt="Cancun's Chamber of Commerce">
+                    <img src="./images/full_logo.webp" alt="Cancun's Chamber of Commerce" width="100" height="auto">
                 </div>
                 <div class="footer-map">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d40313.92854979775!2d-86.85776401124028!3d21.150753474617556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4c2b05aef653db%3A0xce32b73c625fcd8a!2zQ2FuY8O6biwgUS5SLg!5e0!3m2!1ses-419!2smx!4v1643511490022!5m2!1ses-419!2smx" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
