--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -23,7 +23,7 @@
         <header>
             <div class="brand">
                 <a href="./index.html">
-                    <img src="./images/full_logo.webp" alt="Cancun's Chamber of Commerce" width="100" height="auto">
+                    <img src="./images/full_logo.webp" alt="Cancun's Chamber of Commerce" width="100">
                 </a>
             </div>
             <nav class="menu">
@@ -61,6 +61,7 @@
         </header>
 
         <main>
+            <h1 class="text-center">Business Directory</h1>
             <div class="type-of-list">
                 <button id="grid" class="selected"><i class="fa-solid fa-grip"></i></button>
                 <button id="list"><i class="fa-solid fa-list"></i></button>
@@ -71,7 +72,7 @@
         <footer class="footer">
             <div class="columns">
                 <div class="footer-logo">
-                    <img src="./images/full_logo.webp" alt="Cancun's Chamber of Commerce" width="100" height="auto">
+                    <img src="./images/full_logo.webp" alt="Cancun's Chamber of Commerce" width="100">
                 </div>
                 <div class="footer-map">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d40313.92854979775!2d-86.85776401124028!3d21.150753474617556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4c2b05aef653db%3A0xce32b73c625fcd8a!2zQ2FuY8O6biwgUS5SLg!5e0!3m2!1ses-419!2smx!4v1643511490022!5m2!1ses-419!2smx" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
