--- a/chamber/join.html
+++ b/chamber/join.html
@@ -23,7 +23,7 @@
         <header>
             <div class="brand">
                 <a href="./index.html">
-                    <img src="./images/full_logo.webp" alt="Cancun's Chamber of Commerce" width="100" height="auto">
+                    <img src="./images/full_logo.webp" alt="Cancun's Chamber of Commerce" width="100">
                 </a>
             </div>
             <nav class="menu">
@@ -93,30 +93,30 @@
 
                     <fieldset>
                         <legend>Membership types</legend>
-                        <label>
+                        <div>
                             <div class="input-title">
                                 <span class="type">Non Profit  <b class="cost">Free</b></span>
                             </div>
                             <p>Be part of our community. Join us now to be updated and meet other businesses.</p>
-                        </label>
-                        <label>
+                        </div>
+                        <div>
                             <div class="input-title">
                                 <span class="type">Bronze Membership  <b class="cost">$199</b></span>
                             </div>
                             <p>Enjoy </p>
-                        </label>
-                        <label>
+                        </div>
+                        <div>
                             <div class="input-title">
                                 <span class="type">Silver Membership  <b class="cost">$299</b></span>
                             </div>
                             <p>Be part of our community. Join us now to be updated and meet other businesses like yours!</p>
-                        </label>
-                        <label>
+                        </div>
+                        <div>
                             <div class="input-title">
                                 <span class="type">Gold Membership  <b class="cost">$599</b></span>
                             </div>
                             <p>Be part of our community. Join us now to be updated and meet other businesses like yours!</p>
-                        </label>
+                        </div>
                         <label for="membership">Membership: 
                             <select name="membership" id="membership">
                                 <option value="">Select your memebership</option>
@@ -143,7 +143,7 @@
         <footer class="footer">
             <div class="columns">
                 <div class="footer-logo">
-                    <img src="./images/full_logo.webp" alt="Cancun's Chamber of Commerce" width="100" height="auto">
+                    <img src="./images/full_logo.webp" alt="Cancun's Chamber of Commerce" width="100">
                 </div>
                 <div class="footer-map">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d40313.92854979775!2d-86.85776401124028!3d21.150753474617556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4c2b05aef653db%3A0xce32b73c625fcd8a!2zQ2FuY8O6biwgUS5SLg!5e0!3m2!1ses-419!2smx!4v1643511490022!5m2!1ses-419!2smx" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
