--- a/chamber/index.html
+++ b/chamber/index.html
@@ -94,9 +94,9 @@
                         <h2>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</h2>
                     </div>
                     <picture>
-                        <source srcset="./images/hero-medium.webp" media="(min-width: 500px) and (max-width: 799px)">
-                            <source srcset="./images/hero-large.webp" media="(min-width: 800px)">
-                        <img src="./images/hero-small.webp" alt="Cancun Chamber" >
+                        <source srcset="./images/original-medium.webp" media="(min-width: 500px) and (max-width: 799px)">
+                            <source srcset="./images/original-large.webp" media="(min-width: 800px)">
+                        <img src="./images/original-small.webp" alt="Cancun Chamber" >
                     </picture>
                     <div class="layer-dark">
                         <h3 class="welcome">Welcome to Cancu's chamber of Commerce</h3>
@@ -105,10 +105,10 @@
                 </div>
                 <div class="news">
                     <h3>News Release</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil esse sit minus minima dolore optio consectetur deleniti illo voluptatem. Nulla voluptatum atque ipsam suscipit nostrum. Id nobis est optio</p>
+                    <p>Now, we are trying to re incorporate all the necessary activities, however, because the pandemic we need to be ready to keep save our people and protect our city.</p>
                 </div>
                 <div class="spotlights">
-                    <div class="spot">
+                    <!-- <div class="spot">
                         <h3>Thankful Transport</h3>
                         <div class="icon">
                             <i class="fas fa-bus"></i>
@@ -152,7 +152,7 @@
                                 <a href="#" class="link">Website</a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 
             </div>
@@ -178,8 +178,8 @@
         </footer>
     </div>
 
-    <script src="./js/scripts.js"></script>
-    <script src="./js/windchill.js"></script>
-    <script src="./js/localStorage.js"></script>
+    <script src="./js/scripts.js" defer></script>
+    <script src="./js/windchill.js" defer></script>
+    <script src="./js/localStorage.js" defer></script>
 </body>
 </html>
