--- a/chamber/index.html
+++ b/chamber/index.html
@@ -11,7 +11,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Lora:ital,wght@0,400;0,700;1,600&family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/medium.css">
@@ -48,10 +47,10 @@
             </nav>
             <div class="social-media">
                 <a class="fb" href="https://facebook.com" target="_blank">
-                    <i class="fab fa-facebook-f"></i>
+                    <img src="./images/facebook-f-brands.svg" alt="facebook icon">
                 </a>
                 <a class="yt" href="https://youtube.com" target="_blank">
-                    <i class="fab fa-youtube"></i>
+                    <img src="./images/youtube-brands.svg" alt="facebook icon">
                 </a>
             </div>
             <div class="yellow">
@@ -74,7 +73,6 @@
                         Wheater
                     </h3>
                     <div class="wheater-image">
-                        <!-- <i class="fa-solid fa-cloud-sun"></i> -->
                         <img src="#" alt="wheater">
                         <div class="temp">
                             <p><span id="temp">33</span> °F</p>
@@ -163,13 +161,12 @@
                 <div class="footer-logo">
                     <img src="./images/full_logo.webp" alt="Cancun's Chamber of Commerce" width="100">
                 </div>
-                <div class="footer-map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d40313.92854979775!2d-86.85776401124028!3d21.150753474617556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4c2b05aef653db%3A0xce32b73c625fcd8a!2zQ2FuY8O6biwgUS5SLg!5e0!3m2!1ses-419!2smx!4v1643511490022!5m2!1ses-419!2smx" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                </div>
+                <!--  -->
                 <div class="footer-contact">
                     <h3>Contact Us</h3>
                     <a href="mailto:info@cancunschamber.com" target="_blank">info@cancunschamber.com</a>
                     <a href="tel:+529981210000" target="_blank">+52 998 121 0000</a>
+                    <a href="https://www.google.com/maps?ll=21.121343,-86.849233&z=11&t=m&hl=es-419&gl=MX&mapclient=embed&q=Canc%C3%BAn+Quintana+Roo" target="blank"> ↠ 📍  Location Map</a>
                 </div>
             </div>
             <div class="info">
