--- a/chamber/join.html
+++ b/chamber/join.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Lora:ital,wght@0,400;0,700;1,600&family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/medium.css">
@@ -103,19 +103,19 @@
                             <div class="input-title">
                                 <span class="type">Bronze Membership  <b class="cost">$199</b></span>
                             </div>
-                            <p>Enjoy </p>
+                            <p>With Broze membership enjoy other enterprise information that can help you to learn more </p>
                         </div>
                         <div>
                             <div class="input-title">
                                 <span class="type">Silver Membership  <b class="cost">$299</b></span>
                             </div>
-                            <p>Be part of our community. Join us now to be updated and meet other businesses like yours!</p>
+                            <p>With Silver membership you can access to many different events</p>
                         </div>
                         <div>
                             <div class="input-title">
                                 <span class="type">Gold Membership  <b class="cost">$599</b></span>
                             </div>
-                            <p>Be part of our community. Join us now to be updated and meet other businesses like yours!</p>
+                            <p>with Gold membership, you will get access to all the information, about enterprise, activities, events, etc.</p>
                         </div>
                         <label for="membership">Membership: 
                             <select name="membership" id="membership">
@@ -145,9 +145,7 @@
                 <div class="footer-logo">
                     <img src="./images/full_logo.webp" alt="Cancun's Chamber of Commerce" width="100">
                 </div>
-                <div class="footer-map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d40313.92854979775!2d-86.85776401124028!3d21.150753474617556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4c2b05aef653db%3A0xce32b73c625fcd8a!2zQ2FuY8O6biwgUS5SLg!5e0!3m2!1ses-419!2smx!4v1643511490022!5m2!1ses-419!2smx" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                </div>
+                
                 <div class="footer-contact">
                     <h3>Contact Us</h3>
                     <a href="mailto:info@cancunschamber.com" target="_blank">info@cancunschamber.com</a>
