--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -48,10 +48,10 @@
             </nav>
             <div class="social-media">
                 <a class="fb" href="https://facebook.com" target="_blank">
-                    <i class="fab fa-facebook-f"></i>
+                    <img src="./images/facebook-f-brands.svg" alt="facebook icon">
                 </a>
                 <a class="yt" href="https://youtube.com" target="_blank">
-                    <i class="fab fa-youtube"></i>
+                    <img src="./images/youtube-brands.svg" alt="facebook icon">
                 </a>
             </div>
             <div class="yellow">
@@ -104,10 +104,10 @@
                 </p>
                 <div class="social-media">
                     <a class="fb" href="https://facebook.com" target="_blank">
-                        <i class="fab fa-facebook-f"></i>
+                        <img src="./images/facebook-f-brands.svg" alt="facebook icon">
                     </a>
                     <a class="yt" href="https://youtube.com" target="_blank">
-                        <i class="fab fa-youtube"></i>
+                        <img src="./images/youtube-brands.svg" alt="facebook icon">
                     </a>
                 </div>
             </aside>
